# ohayodash

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  index.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/: renovate.json
.github/workflows/: build-container.yaml  lint.yaml  release-chart.yaml  release.yaml
charts/ohayodash/: Chart.yaml  README.md  README.md.gotmpl  README_CHANGELOG.md.gotmpl  README_CONFIG.md.gotmpl  values.yaml
charts/ohayodash/ci/: ct-values.yaml
charts/ohayodash/templates/: rbac.yaml
ohayodash/: app.py  base.py
ohayodash/data/: providers.yaml
ohayodash/static/css/: styles.css
ohayodash/static/js/: data.js  script.js  search.js  themer.js
ohayodash/templates/: index.j2
