[project]
name = "ohayodash"
version = "0.5.0"
description = "Ohayo Dash is a Kubernetes driven start page and dashboard"
authors = [{ name = "Andrew Williams", email = "andy@tensixtyone.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (==3.1.0)",
    "kubernetes (==32.0.1)",
    "pyyaml (==6.0.2)",
    "gunicorn (==23.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
ruff = "^0.10.0"

[tool.ruff]
lint.ignore = ["E501"]