[project]
name = "ohayodash"
version = "0.6.0"
description = "Ohayo Dash is a Kubernetes driven start page and dashboard"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "kubernetes>=33.1.0",
    "pyyaml>=6.0.2",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.ignore = ["E501"]
