[metadata]
name = ohayodash
version = 0.1.0
description = A Kubernetes driven start page and dashboard. All configuration is done by standard Kubernetes objects and ConfigMaps.
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = ohayodash
install_requires =
    flask
    kubernetes
    pyyaml
    gunicorn

[flake8]
format = wemake
ignore = E501
max-line-length = 120
exclude = setup.py

[darglint]
docstring_style=sphinx
