[metadata]
name = ohayodash
version = 0.4.0-dev
description = A Kubernetes driven start page and dashboard. All configuration is done by standard Kubernetes objects and ConfigMaps.
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = ohayodash
install_requires =
    flask
    kubernetes
    pyyaml
    gunicorn

[options.package_data]
ohayodash = data/*.yaml

[flake8]
format = wemake
ignore = E501,D,WPS226,WPS110, WPS210,WPS231,WPS202
max-line-length = 120
exclude = setup.py

[darglint]
docstring_style=sphinx
